2015-06-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (info_read_in_echo_area)
	(info_read_completing_internal, info_read_maybe_completing)
	(info_read_completing_in_echo_area_with_exclusions): Add const
	qualifier to char * in parameter list.

2015-06-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* run gnulib --add-import

2015-06-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 5.9.95, 5.9.96
	* configure.ac: version.

2015-06-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Attempt to register display size as 0 by 0.
	* info/t/c-u-m-x-scroll-forward.sh: Comment changed.

2015-06-20  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (kill): Move prototype from here...
	* system.h: ...to here, conditioned by __MINGW32__.  This solves
	compiler warnings in signals.c.
	* info/pcterm.c	(wcwidth): Make function's signature consistent
	with Gnulib's prototype in gnulib/lib/wchar.h.

	* info/session.c (w32_read): Provide prototype, to avoid compiler
	warnings.

2015-06-18  Eli Zaretskii  <eliz@gnu.org>

	* tp/Texinfo/Common.pm (open_out): Call binmode on opened file 
	handle as intended.

2015-06-18  Karl Berry  <karl@freefriends.org>

	* pretest 5.9.94.
	* configure.ac: version.

2015-06-18  Eli Zaretskii  <eliz@gnu.org>

	Avoid "implicit declaration" warnings in pcterm.c.
	* info/pcterm.c: Include display.h.  Provide prototypes for
	'kill', 'reset_info_window_sizes', and 'redisplay_after_signal'.

2015-06-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Commom.pm (open_out): Add parameter which 
	conditionalizes the calls to "binmode" on file handle.
	* tp/Texinfo/Convert/Info.pm (_open_info_file): New function,
	wrapping Texinfo::Common::open_out.  Call 
	Texinfo::Common::open_out so that it calls "binmode".
	(output): Call _open_info_file instead of open_out directly.

2015-06-16  Karl Berry  <karl@freefriends.org>

	* texindex/tests/ti-helpversion: new test, in new subdir, with
	fingers crossed.